add styles to chatroom

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,4 +1,45 @@
 .chat-room{
     height: 100vh;
     overflow-y: hidden;
+    .message{
+        min-height: 59px;
+        .content-container{
+        display: inline-block;
+            .content {
+                background-color: #9cdaa4;
+                padding: 8px 16px;
+                border-radius: 15px;
+                
+            }
+            .auther{
+                font-size: 0.8rem;
+                color: gray;
+                margin-left: 10px;
+            }
+        }
+     &.me {
+         .content-container {
+            float: right;
+            .content{
+            background-color: cornflowerblue;
+            }
+
+         }
+     }   
+    }
+    
+    .chat-box {
+        position: absolute;
+        bottom: 0;
+        padding: 20px;
+        width: 100%;
+        input[type=text] {
+            height: 45px;
+            font-size: 18px;
+            padding: 8px;
+        }
+        .btn {
+            height: 45px;
+        }
+    }
 }
