--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -2,7 +2,6 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-3">
-        <p>Hello, <%= current_user.username %></p>
         
         <%= render 'form', room: Room.new %>
         <hr>
@@ -18,12 +17,34 @@
     </div>
     <div class="col-9">
       <% if @room.present? %>
-      <div class="chat-room">
-        <p><%= @room.name %><p>
-        <div class="chat-box">
-          <%= render 'messages/form', message: Message.new, room: @room %>
+        <div class="chat-room">
+        <nav class="navbar navbar-light bg-light mb4">
+              <span class="navbar-brand" href="#"><%= @room.name %></span>
+              <ul class='navbar-nav'>
+                <li class="nav-item">
+                  Hello, <%= current_user.username %>
+                </li>
+              </ul>
+          </nav>
+
+          <% @room.messages.each do |message| %>
+            <div class="message mb-3 <%='me' if message.user == current_user %> ">
+              <div class="content-container">
+                <div class="content" >
+                  <%= message.content %>
+                </div>
+                <div class="auther">
+                  <%= message.user.username %>
+                </div>
+              </div>    
+            </div>
+            <br>
+            <br>
+          <% end %>
+          <div class="chat-box">
+            <%= render 'messages/form', message: Message.new, room: @room %>
+          </div>
         </div>
-      </div>
       <% end %>
     </div>
   </div>
