--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,4 +1,6 @@
-<p id="notice"><%= notice %></p>
+<div id='room-id', data-room-id="<%= @room.try(:id) %>"></div>
+<div id='user-id', data-user-id="<%= current_user.id %>"></div>
+
 <div class="container-fluid">
   <div class="row">
     <div class="col-3">
@@ -26,21 +28,12 @@
                 </li>
               </ul>
           </nav>
+          <div id='messages'>
+            <% @room.messages.each do |message| %>
+              <%= render 'messages/message' ,message: message %>
+            <% end %>
+          </div>
 
-          <% @room.messages.each do |message| %>
-            <div class="message mb-3 <%='me' if message.user == current_user %> ">
-              <div class="content-container">
-                <div class="content" >
-                  <%= message.content %>
-                </div>
-                <div class="auther">
-                  <%= message.user.username %>
-                </div>
-              </div>    
-            </div>
-            <br>
-            <br>
-          <% end %>
           <div class="chat-box">
             <%= render 'messages/form', message: Message.new, room: @room %>
           </div>
